[metadata]
name = pt_trainer
version = 0.1.0
description = pt_trainer, boilerplate code for training, logging and evaluation in PyTorch.
author = Lakshya Malhotra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LakshyaMalhotra/pt_trainer
author = Lakshya Malhotra
author_email = lakshya9009@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
    Topic::Scientific/Engineering::Artificial Intelligence
    License::OSI Approved::MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = artificial-intelligence deep-learning pytorch ml torchinfo model

[options]
package_dir = pt_trainer
packages = find:
python_requires = >=3.7
include_package_data = True